tests/baselines/reference/genericRestArityStrict.errors.txt
tests/cases/conformance/types/rest/genericRestArityStrict.ts(7,6): error TS2345: Argument of type '(x: number, y: number) => number' is not assignable to parameter of type '() => void'.


==== tests/cases/conformance/types/rest/genericRestArityStrict.ts (1 errors) ====
    // Repro from #25559
    
    declare function call<TS extends unknown[]>(
        handler: (...args: TS) => void,
        ...args: TS): void;
      
    call((x: number, y: number) => x + y);
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(x: number, y: number) => number' is not assignable to parameter of type '() => void'.
    call((x: number, y: number) => x + y, 1, 2, 3, 4, 5, 6, 7);
    